--- a/src/Slack.Api.CSharp/Slack.Api.CSharp.nuspec
+++ b/src/Slack.Api.CSharp/Slack.Api.CSharp.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>1.0.1</version>
+    <version>1.1.2</version>
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
@@ -11,9 +11,9 @@
     <iconUrl>https://i.imgur.com/oKAzpvr.png</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Initial release. Contains .Net classes for Slack's WebApi and a wrapper object for EventApi.</releaseNotes>
+    <releaseNotes>Fixed SlackAction class.</releaseNotes>
     <copyright>Copyright 2019</copyright>
-    <tags>slack csharp api webapi eventapi slackapi .net rest async</tags>
+    <tags>slack csharp api webapi eventapi slackapi .net rest async core</tags>
 	<dependencies>
 		<group targetFramework="uap">
 			<dependency id="Microsoft.Rest.ClientRuntime" version="2.3.19" />
