--- a/src/Slack.Api.CSharp/Slack.Api.CSharp.nuspec
+++ b/src/Slack.Api.CSharp/Slack.Api.CSharp.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>1.1.3</version>
+    <version>1.1.5</version>
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
@@ -11,7 +11,7 @@
     <iconUrl>https://i.imgur.com/oKAzpvr.png</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Fixed SlackAction class.</releaseNotes>
+    <releaseNotes>Added User and ClientMsgId property to SlackEvent.</releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags>slack csharp api webapi eventapi slackapi .net rest async core</tags>
 	<dependencies>
